--- a/hospital-mgr.cfg
+++ b/hospital-mgr.cfg
@@ -1,8 +1,8 @@
 [string]
+db_pass=200338-YangPOSTGRESQL@
 db_name=hospital_db
 db_host=localhost
 db_user=postgres
-db_pass=postgres
 [int]
-db_port=5433
+db_port=5432
 port=8080
