responsive insert query

--- a/hospital-mgr.cfg
+++ b/hospital-mgr.cfg
@@ -1,8 +1,8 @@
 [string]
 db_host=localhost
 db_user=postgres
-db_pass=200338-YangPOSTGRESQL@
+db_pass=postgres
 db_name=hospital_db
 [int]
 port=8080
-db_port=5432
+db_port=5433
